Fixed some issues on the codes such as notifications not showing properly and not taking the user to the success page after checkout.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 430px;
+    width: 100%;
     box-sizing: border-box;
     position: fixed;
     bottom: 0;
